--- a/THANKS
+++ b/THANKS
@@ -1,9 +1,8 @@
 
-Many thanks for prayer support to:
+Many thanks for prayer support on the project to:
 
 	- Dennis Pete Bentley <bentleyd575@yahoo.com>
 	- Ivan Vicente <vicfineart@gmail.com>
-	- Erita Dermawati
 
 Dedicated to the memory of my faithfully departed friend Tomislav Potočar.
 
